--- a/index2.html
+++ b/index2.html
@@ -23,9 +23,9 @@
             <div class="content active">
                 <img src="Image/the-covenant-title.png" alt="" class="movie-title">
                 <h4>
-                    <span>2023</span><span><i>12+</i></span><span>2h 14min</span><span>Romance</span>
+                    <span>2023</span><span><i>18+</i></span><span>1h 58min</span><span>Action</span>
                 </h4>
-                <p>A young mermaid makes a deal with a sea witch to trade her beautiful voice for human legs so she can discover the world above water and impress a prince. </p>
+                <p>In March 2018, amidst the War in Afghanistan, U.S. Army Special Forces Master Sergeant John Kinley and his unit are ambushed by a truck bomb attack orchestrated by the Taliban during a routine vehicle inspection at Lashkargah, which claims the life of his interpreter. </p>
                 
                 <div class="button">
                     <a href="watch2.html"><i class="fa fa-play" aria-hidden="true"></i>Trailer</a>
