--- a/index3.html
+++ b/index3.html
@@ -23,9 +23,9 @@
             <div class="content active">
                 <img src="Image/the-65-title.png" alt="" class="movie-title">
                 <h4>
-                    <span>2023</span><span><i>12+</i></span><span>2h 14min</span><span>Romance</span>
+                    <span>2023</span><span><i>12+</i></span><span>2h 14min</span><span>Sci-Fi</span>
                 </h4>
-                <p>A young mermaid makes a deal with a sea witch to trade her beautiful voice for human legs so she can discover the world above water and impress a prince. </p>
+                <p>Sixty-five million years ago, on the planet Somaris, pilot Mills is convinced by his wife that he should take on a two-year space expedition to earn the money needed to treat their daughter Nevine's illness. </p>
                 
                 <div class="button">
                     <a href="watch1.html"><i class="fa fa-play" aria-hidden="true"></i>Trailer</a>
