--- a/index4.html
+++ b/index4.html
@@ -23,9 +23,9 @@
             <div class="content active">
                 <img src="Image/bp.png" alt="" class="movie-title">
                 <h4>
-                    <span>2023</span><span><i>12+</i></span><span>2h 14min</span><span>Romance</span>
+                    <span>2022</span><span><i>16+</i></span><span>2h 38min</span><span>Action</span>
                 </h4>
-                <p>A young mermaid makes a deal with a sea witch to trade her beautiful voice for human legs so she can discover the world above water and impress a prince. </p>
+                <p>Thousands of years ago, five African tribes war over a meteorite containing the metal vibranium. One warrior ingests a "heart-shaped herb" affected by the metal and gains superhuman abilities, becoming the first "Black Panther". He unites all but the Jabari Tribe to form the nation of Wakanda. </p>
                 
                 <div class="button">
                     <a href="watch4.html"><i class="fa fa-play" aria-hidden="true"></i>Trailer</a>
