--- a/index5.html
+++ b/index5.html
@@ -23,9 +23,9 @@
             <div class="content active">
                 <img src="Image/avatarlogo.png" alt="" class="movie-title">
                 <h4>
-                    <span>2023</span><span><i>12+</i></span><span>2h 14min</span><span>Romance</span>
+                    <span>2023</span><span><i>12+</i></span><span>1h 48min</span><span>Adventure</span>
                 </h4>
-                <p>A young mermaid makes a deal with a sea witch to trade her beautiful voice for human legs so she can discover the world above water and impress a prince. </p>
+                <p>Sixteen years after the Na'vi repelled the Resources Development Administration (RDA) from Pandora, Jake Sully lives as chief of the Omatikaya clan and raises his family with Neytiri, consisting of two sons Neteyam and Lo'ak, his daughter Tuktirey, and adopted daughter Kiri.  </p>
                 
                 <div class="button">
                     <a href="watch5.html"><i class="fa fa-play" aria-hidden="true"></i>Trailer</a>
