--- a/index6.html
+++ b/index6.html
@@ -23,9 +23,9 @@
             <div class="content active">
                 <img src="Image/tbd.png" alt="" class="movie-title">
                 <h4>
-                    <span>2023</span><span><i>12+</i></span><span>2h 14min</span><span>Romance</span>
+                    <span>2023</span><span><i>12+</i></span><span>1h 55min</span><span>Horror</span>
                 </h4>
-                <p>A young mermaid makes a deal with a sea witch to trade her beautiful voice for human legs so she can discover the world above water and impress a prince. </p>
+                <p>Nixon Oil company inspector Paul Sturges is sent to a small Mexican town in Baja California, to check on El Diamante, an offshore oil rig. He brings his wife Ines and their two children, Audrey and Tommy, along for a vacation. Upon arrival, the family finds the town in ruins. The remaining locals are suspicious and unfriendly, and fear turns to anger when they learn that Paul works for the company that commissioned the oil rig. </p>
                 
                 <div class="button">
                     <a href="watch6.html"><i class="fa fa-play" aria-hidden="true"></i>Trailer</a>
